# Churn_Prediction

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
analysis/: EDA.ipynb
scripts/: train.py
src/: config.py  pipeline.py
src/data/: loader.py  preprocessor.py
src/evaluation/: business_metrics.py  metrics.py
src/features/: engineer.py  selector.py
src/models/: base.py  logistic.py  random_forest.py  registry.py  xgboost_model.py
src/serving/: app.py  model_store.py  schema.py
src/tracking/: mlflow_tracker.py
src/tuning/: tuner.py
tests/: conftest.py  test_engineer.py  test_model_store.py  test_pipeline.py  test_schema.py  test_selector.py
