[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "churn-prediction"
version = "0.4.0"
description = "Bank customer churn prediction — training pipeline and FastAPI serving layer."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core data stack
    "pandas>=2.2",
    "numpy>=1.26",
    # ML
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    # Tuning & tracking
    "optuna>=4.8",
    "mlflow>=2.10",
    # Serving
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "joblib>=1.3",
]

[tool.setuptools.packages.find]
# Discovers src, src.data, src.features, src.models, src.serving, etc.
where = ["."]
include = ["src*"]
