[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "churn-prediction"
version = "0.4.0"
description = "Bank customer churn prediction — training pipeline and FastAPI serving layer."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core data stack
    "pandas>=2.2",
    "numpy>=1.26",
    # ML
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    # Tuning & tracking
    "optuna>=4.8",
    "mlflow>=2.10",
    # Serving
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "joblib>=1.3",
]

[tool.setuptools.packages.find]
# Discovers src, src.data, src.features, src.models, src.serving, etc.
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# E/W = pycodestyle, F = pyflakes, I = isort
select = ["E", "F", "I", "W"]
ignore = [
    "E501",  # line too long — handled by formatter, not enforced as error
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true   # avoids failures for third-party libs without stubs
warn_unused_ignores = true
warn_return_any = false         # too noisy for sklearn/pandas heavy code

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    # mlflow uses Pydantic V1-style validators internally — not our code
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
    "ignore::DeprecationWarning:mlflow",
    # matplotlib uses deprecated pyparsing APIs internally — not our code
    "ignore::pyparsing.warnings.PyparsingDeprecationWarning",
]
